# cerkle-tree

./: .gitignore  CMakeLists.txt  README.md
docs/: path_algorithm.md  triangles.md
src/: hash_function.cpp  hash_function.h  hash_sha256.cpp  hash_sha256.h  main.cpp  node.cpp  node.h  path.h  proof.cpp  proof.h  smt.cpp  smt.h
tests/: test_main.cpp  test_smt.cpp  test_smt_hashing.cpp  test_smt_initialization.cpp  test_smt_large_tree.cpp  test_smt_nodes.cpp  test_smt_non_inclusion_proofs.cpp  test_smt_proofs.cpp  test_smt_root_calculation.cpp  test_utils.h
web_serv/: .gitignore  CMakeLists.txt  requirements.txt  server.py
web_serv/src/: bindings.cpp  globals.cpp
web_serv/templates/: index.html
